@@ -1,15 +1,15 @@
-#!/usr/bin/perl -w
+#/usr/bin/perl -w
 use strict;
-use Test::More tests => 9;
+use Test::More;
 use Config;
-package test;
+package test; ## no critic
 use Moo;
 use MooX::Options;
 with qw(MooX::Ipc::Cmd);
 1;
 
 
-package main;
+package main; ## no critic
 # use Log::Any::Adapter('Stdout');
 use constant NO_SUCH_CMD => "this_command_had_better_not_exist";
 
@@ -24,7 +24,7 @@ if ($^O ne 'VMS') {
 
 # Win32 systems don't support multi-arg pipes.  Our
 # simple captures will begin with single-arg tests.
-my $output_exe = "$perl_path output.pl";
+my @output_exe = "$perl_path output.pl";
 
 # use_ok("IPC::System::Simple","capture");
 my $test=test->new;
@@ -32,19 +32,18 @@ chdir("t");
 
 # Scalar capture
 
-my @output = $test->_capture([$output_exe]);
+my @output = $test->_capture([@output_exe]);
 ok(1);
 
 is_deeply(\@output,["Hello\n","Goodbye\n"],"Scalar capture");
 is($/,"\n","IFS intact");
 
-my $qx_output = qx([$output_exe]);
+my $qx_output = qx(@output_exe);
 # is_deeply(\@output, $qx_output, "capture and qx() return same results");
 
 # List capture
 
-@output = $test->_capture([$output_exe]);
-ok(1);
+@output = $test->_capture([@output_exe]);
 
 is_deeply(\@output,["Hello\n", "Goodbye\n"],"List capture");
 is($/,"\n","IFS intact");
@@ -62,9 +61,10 @@ is($no_output,undef, "No output from failed command");
 
 print "# buffer test string";	# NB, no trailing newline
 
-@output = $test->_capture([$output_exe]);
+@output = $test->_capture([@output_exe]);
 
 print "\n";  # Terminates our test string above in TAP output
 
 is_deeply(\@output,["Hello\n","Goodbye\n"],"Single-arg capture still works");
+done_testing;
 1;
